# study-snake-xenon-board

./: .copilot-commit-message-instructions.md  .cursorrules  .gitignore  DOCKER_README.md  README.md  RUN_INSTRUCTIONS.md  backend_instructions.md  docker-compose-dev.yml  frontend_instructions.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  schema.sql
backend/migrations/: 20251123053043_create_users_and_posts_table.sql
backend/src/: config.rs  db.rs  main.rs  state.rs
backend/src/apps/board/: handlers.rs  mod.rs  models.rs
backend/src/apps/user/: auth.rs  handlers.rs  mod.rs  models.rs
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/pages/: BoardDetail.jsx  BoardForm.jsx  BoardList.jsx  Login.jsx  Register.jsx
frontend/src/store/: authSlice.js
