[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "chrono", "uuid"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0.0", features = ["axum"] }
